# spar-cli

./: .gitignore  CONTEXT.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: AGENT.md  HANDOFF.md
docs/adr/: 0001-fresh-sessions-per-phase.md  0002-parallelism-aware-graph-sequential-first.md  0003-spar-as-agent-operated-engine.md  0004-gui-dashboard-pilot-with-grill-module.md  0005-conversation-modules-and-tool-window-rails.md  0006-files-module-editor-and-search.md
docs/reviews/: 2026-07-10-external-review.md
packaging/macos/: Spar.spec  build_dmg.sh  entrypoint.py
scripts/: gui_screenshots.py
spar/: __init__.py  cli.py  config.py  envprobe.py  gates.py  guard.py  headless.py  orchestrator.py  state.py  status.py  stream.py  ui.py  verdict.py  watch.py
tests/: __init__.py  conftest.py  test_adapter_base_streaming.py  test_adapter_claude.py  test_adapter_codex.py  test_cli.py  test_config.py  test_contract_real_cli.py  test_e2e_debate.py  test_envprobe.py  test_exec_e2e.py  test_exec_gitops.py  test_exec_loop.py  test_exec_preflight.py  test_exec_prompts.py  test_exec_review.py  test_exec_state.py  test_exec_tasklist.py  test_gates.py  test_guard.py  test_gui_app.py  test_gui_chat_store.py  test_gui_conversation.py  test_gui_files.py  test_gui_files_pure.py  test_gui_grill.py  test_gui_orchestrator.py  test_gui_orchestrator_pure.py  test_gui_rails.py  test_gui_rails_pure.py  test_gui_repo.py  test_gui_runner.py  test_gui_sidepane.py  test_gui_stream.py  test_gui_toolbar.py  test_orchestrator.py  test_state.py  test_stream.py  test_ui.py  test_verdict.py  (+1 more)
(+43 files in other folders)
