[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spar-cli"
version = "0.1.0"
requires-python = ">=3.11"
description = "CLI tool orchestrating debates between AI CLIs"
authors = [{name = "Marek Bartczak", email = "marek.bartczak@gmail.com"}]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
spar = "spar.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spar*"]

[tool.pytest.ini_options]
markers = [
    "contract: opt-in contract tests for real AI CLIs (set SPAR_CONTRACT_TESTS=1)",
    "timeout: mark test with timeout",
]
